all margins and text size values  moved to dimens resource file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="light_theme">Açık Tema</string>
     <string name="dark_theme">Koyu Tema</string>
     <string name="system_theme">Sistem Tema</string>
+    <string name="add_to_coupon">Kupona Ekle</string>
 </resources>
